--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-ECHO attivo.
+<!DOCTYPE htm>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width-device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" >
+<title>Pagina di benvenuto</title>
+<link rel="stylesheet" href="main.css">
+</head>
+<body>
+<h1>BENVENUTO</h1>
+</body>
+</html>
+
